[tool.poetry]
name = "c3po"
version = "0.1.0"
description = ""
authors = ["Yoshiori Shoji <yoshiori@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.21.3"
langchain = "^0.0.184"
openai = "^0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
